# numpy-journey

./: 01_Array_Creation.ipynb  02_Array_Operations.ipynb  03_Broadcasting.ipynb  04_Modifying_Elements.ipynb  05_Math_Functions.ipynb  06_Set_Functions.ipynb  07_User_Defined_Functions.ipynb  07_Utility_Functions.ipynb  08_Utility_Functions.ipynb  README.md  basics_01.ipynb  basics_02.ipynb  basics_03.ipynb  pyproject.toml  ruff.toml
